# llm-policy-library

./: .antigravity.json  .env.example  .gitignore  AGENTS.md  README.md  TASK.md  TODO.md  pyproject.toml  requirements.txt
.agents/skills/adversarial-review/: SKILL.md
.claude/skills/adversarial-review/: SKILL.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: main_llm-policy-library.yml
docs/: architecture.md  azure-setup.md
evaluation/: golden_set.json  run_eval.py
llm_policy_library/: api.py  build_map.py  cli.py  config.py  corpus_map.json  corpus_map.py  dataset.py  evaluation.py  ingest.py  logging_setup.py  models.py  orchestrator.py  prompts.json  prompts.py  rate_limit.py  search_index.py
llm_policy_library/agents/: __init__.py  judges.py  planner.py  response.py  retrieval.py
loadtest/: __init__.py  baseline.py  checks.py  locustfile.py
samples/: corpus_map_ab.md  evaluation_report.md  evaluation_transcripts.json  loadtest_baseline.txt  loadtest_failures.csv  loadtest_results.md  loadtest_stats.csv  loadtest_stats_history.csv  smoke_test.json
static/: index.html
tests/: test_api.py  test_build_map.py  test_cli.py  test_config.py  test_corpus_map.py  test_dataset.py  test_evaluation.py  test_ingest.py  test_logging_setup.py  test_models.py  test_orchestrator.py  test_prompts.py  test_rate_limit.py  test_search_index.py
tests/agents/: test_judges.py  test_planner.py  test_response.py  test_retrieval.py
tests/fixtures/: oscal_catalog_excerpt.json
tests/loadtest/: test_checks.py
