[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-policy-library"
version = "0.0.1"
description = "A sample project using LLM agents to search and query policy documents."
requires-python = ">=3.14"
authors = [
  {name = "Libo Yin", email = "liboyin830@gmail.com"}
]
dependencies = [
  # Major-capped: 12.x reworked the index/vector API this project builds against.
  "azure-search-documents>=12.0.0,<13",
  "fastapi",
  "httpx",
  "openai",
  "pydantic>=2",
  "pydantic-settings>=2",
  # PydanticAI replaced the Microsoft Agent Framework, whose pins conflicted
  # with azure-search-documents. `-slim` with the one extra we use: the
  # `pydantic-ai` meta-package pulls every provider (Anthropic, Groq, Mistral,
  # ...) plus evals and MCP, none of which this project touches.
  # Floor at 2: the code uses the post-1.0 surface (`OpenAIChatModel`,
  # `output_type`, `openai_reasoning_effort`).
  "pydantic-ai-slim[openai]>=2",
  "python-dotenv",
  "tenacity",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "locust",
  "mypy",
  "pip-tools",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "respx",
  "ruff",
]

[tool.setuptools]
# Explicit: setuptools' flat-layout auto-discovery would choke once `evaluation/`
# and `loadtest/` land as top-level directories in later phases.
packages = ["llm_policy_library", "llm_policy_library.agents"]

[tool.setuptools.package-data]
"llm_policy_library" = ["*.json"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=llm_policy_library --cov-report=term-missing --cov-fail-under=80"
# The agents and the pipeline are async throughout; `auto` runs their tests
# without a marker on every one of them.
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
