[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-policy-library"
version = "0.0.1"
description = "A sample project using LLM agents to search and query policy documents."
requires-python = ">=3.14"
authors = [
  {name = "Libo Yin", email = "liboyin830@gmail.com"}
]
dependencies = [
  # Major-capped: 12.x reworked the index/vector API this project builds against.
  "azure-search-documents>=12.0.0,<13",
  # required by Azure App Services
  "aiohttp",
  "fastapi",
  "httpx",
  "openai",
  "pydantic>=2",
  "pydantic-settings>=2",
  # The Microsoft Agent Framework, which TASK.md requirement 2 mandates for the
  # multi-agent system. `-core` holds the Azure OpenAI chat client and the
  # Workflow engine; `-openai` holds the client itself. NOT the `agent-framework`
  # meta-package: it pulls ~40 optional integrations (Bedrock, Ollama, Redis, ...)
  # this project never touches, and there is no `agent-framework-azure-openai` —
  # the Azure client is `OpenAIChatClient(azure_endpoint=...)`. The version
  # conflict with azure-search-documents that once drove the PydanticAI migration
  # no longer exists (verified 2026-07-16). Floored at the surface this code needs
  # (`AgentResponse`, `usage_details`, `OpenAIChatOptions[...]`, `output_from=`);
  # major-capped because the API drifts even across minors (1.10 -> 1.11 renamed
  # `AgentRunResponse` to `AgentResponse`).
  "agent-framework-core>=1.11,<2",
  "agent-framework-openai>=1.10,<2",
  "python-dotenv",
  "tenacity",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "locust",
  "mypy",
  "pip-tools",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-randomly",
  "respx",
  "ruff",
]

[tool.setuptools]
# Explicit: setuptools' flat-layout auto-discovery would choke once `evaluation/`
# and `loadtest/` land as top-level directories in later phases.
packages = ["llm_policy_library", "llm_policy_library.agents"]

[tool.setuptools.package-data]
"llm_policy_library" = ["*.json"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# `loadtest` is a package but not an installed one, so the repo root must be
# importable for its tests to `import loadtest.locustfile`.
pythonpath = ["."]
addopts = "--cov=llm_policy_library --cov-report=term-missing --cov-fail-under=80"
# The agents and the pipeline are async throughout; `auto` runs their tests
# without a marker on every one of them.
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
